--- a/style.css
+++ b/style.css
@@ -228,6 +228,7 @@
     font-size: 54px;
     font-weight: 800;
     margin-bottom: 30px;
+    color: white;
   }
   #about-us-in p {
     font-size: 20px;
